# udl

./: .gitignore  README.md  laplace_posterior_sampling.ipynb  pyproject.toml  train.py
bul/models/: linearized.py  model_factory.py  resnet_cifar.py
bul/utils/: constants.py  datasets.py  decompositions.py  filter.py  flatten.py  kfac.py  laplace.py  linear_operators.py  loaders.py  low_rank.py  metrics.py  transforms.py
tests/: test_dual_laplace.py
untangle/: submit.py  validate.py
untangle/datasets/: soft_dataset.py  soft_imagenet.py
untangle/models/: resnet_cifar_preact.py
untangle/plots/: plot_calibration_robustness.py  plot_correctness_robustness.py  plot_correlation_datasets.py  plot_correlation_matrix.py  plot_estimator_correlation_matrix.py  plot_full_correlation_matrix.py  plot_ranking.py  plot_ranking_it.py  plot_ranking_shallow.py  plot_uncertainty.py  utils.py
untangle/transforms/: ood_transforms_cifar.py  ood_transforms_imagenet.py  random_resized_crop.py
untangle/utils/: __init__.py  context.py  loader.py  logging.py  metric.py  model.py  parsing.py  replace.py  timm.py  transform.py
untangle/wrappers/: __init__.py  adapted_laplace_wrapper.py  dual_laplace_wrapper.py  model_wrapper.py
